--- a/src/02_rgb_classification.Rmd
+++ b/src/02_rgb_classification.Rmd
@@ -875,7 +875,7 @@ training_df <-
   #   , .names = "{.col}_sq" 
   # ))
 ##### and validation data to perform accuracy assesment at the pixel level
-validation_dta <-
+validation_df <-
   terra::extract(
     pred_rast
     , validation_points %>%  
@@ -901,7 +901,7 @@ compare training and validation data to ensure that they are similar (i.e. we dr
 ```{r}
 dplyr::bind_rows(
     training_df %>% sf::st_drop_geometry() %>% dplyr::mutate(dta_set = "Training")
-    , validation_dta %>% sf::st_drop_geometry() %>% dplyr::mutate(dta_set = "Validation")
+    , validation_df %>% sf::st_drop_geometry() %>% dplyr::mutate(dta_set = "Validation")
   ) %>% 
   dplyr::select(-c(geometry,dplyr::ends_with("_sq"))) %>% 
   dplyr::mutate_if(is.factor, as.numeric) %>% 
@@ -925,7 +925,7 @@ ggplot(mapping = aes(x = value, color = dta_set, fill = dta_set, group = dta_set
       "by Training (n="
       , nrow(training_df) %>% scales::comma(accuracy = 1)
       , ") and Validation (n="
-      , nrow(validation_dta) %>% scales::comma(accuracy = 1)
+      , nrow(validation_df) %>% scales::comma(accuracy = 1)
       , ") data"
     )
   ) +
@@ -1027,8 +1027,8 @@ terra::plot(
 evaluate model performance based on the Area under the Receiver Operating Characteristic (ROC) Curve (AUC) criterion (an AUC value of 0.5 can be interpreted as the model performing no better than a random prediction). Higher AUC values indicate that the model is better at predicting "absence" classes as "absence" (true negative) and "presence" classes as "presence" (true positive).
 
 ```{r}
-validation_dta <-
-  validation_dta %>% 
+validation_df <-
+  validation_df %>% 
   dplyr::bind_cols(
     terra::extract(
       rf_pred_rast
@@ -1039,7 +1039,7 @@ validation_dta <-
   )
 
 PresenceAbsence::auc.roc.plot(
-  validation_dta %>% 
+  validation_df %>% 
     sf::st_drop_geometry() %>% 
     dplyr::select(id, is_pile, is_pile_predicted) %>% 
     dplyr::mutate(dplyr::across(tidyselect::starts_with("is_pile"), ~ as.numeric(.x)-1 ))
@@ -1051,7 +1051,7 @@ now lets check the confusion matrix of the pixel-based approach
 
 ```{r}
 confusion_matrix_temp <-
-  validation_dta %>% 
+  validation_df %>% 
   dplyr::mutate(dplyr::across(tidyselect::starts_with("is_pile"), ~ as.numeric(.x)-1 )) %>% 
   dplyr::rename(
     presence = is_pile
@@ -1134,6 +1134,7 @@ that's not very good as we could tell from the prediction map
 ```{r, warning=FALSE, message=FALSE, echo=FALSE, include=FALSE}
 remove(list = ls()[grep("_temp",ls())])
 remove(mod_rf, rf_pred_rast, rodmanetal2019_grvi_rast, rodmanetal2019_panchromatic_rast)
+remove(validation_points, validation_df, mod_rf, kmeans_cluster_rast, kmncluster)
 gc()
 ```
 
@@ -1868,6 +1869,317 @@ terra::plot(
   , add = T, border = "orangered", col = NA, lwd = 1.2
 )
 ```
+
+##### Matching process
+
+Puliti et al. [(2023, p. 14)](https://doi.org/10.48550/arXiv.2309.01279) provide guidance on performing "instance segmentation evaluation" to assess the ability of a method to correctly identify and delineate individual tree crown instances compared ground truth data. We'll use this same methodology to test our slash pile identification approach.
+
+>The first step in performing any instance segmentation evaluation is to match the point cloud reference and predicted instance IDs. To do this, it is necessary to define whether a prediction is correct. Here we adopt a method Wielgosz et al. (2023) proposed for matching tree instance IDs from two point clouds with reference and predicted instance IDs, respectively. Given a reference and a predicted point cloud with two separate sets of instances, the tree instances are iteratively matched in descending order from the tallest to the shortest trees by using the following algorithm:
+
+a) Find the tallest tree in the reference data;
+b) Find the tree in the predicted instances that have the largest intersection over union (IoU) with the tree selected in the previous step;
+c) if the IoU is <0.5: the predicted tree is considered an error, and thus no reference instance ID is available;
+d) if the IoU is ≥0.5: the tree is considered a correct match, and assign reference instance ID label to the predicted tree;
+e) Add to collection (dictionary) of predicted tree instances with IDs matching the reference instance IDs.
+
+Following the initial matching of reference and predicted instance IDs, the evaluation can be done on the tree level to evaluate detection, omission, and commission rates (which can be used to calculate precision, recall, and the F-score metric)
+
+```{r}
+# check the data
+check_gt_str <- function(
+  gt_inst
+  , gt_id = "pile_id"
+  , predictions
+  , pred_id = "pred_pile_id"  
+) {
+  if( !inherits(gt_inst,"sf")){stop("ground truth must be spatial `sf` data with a single record")}
+  if( !inherits(predictions,"sf") ){stop("predictions must be spatial `sf` data")}
+  if( !identical(sf::st_crs(gt_inst),sf::st_crs(predictions)) ){stop("`sf` data should have same crs projection")}
+  if( is.null(gt_id) || is.na(gt_id) || 
+      !inherits(gt_id, "character") ||
+      stringr::str_trim(gt_id) == "" 
+  ){
+    stop("ground truth data must contain `gt_id` column")
+  }
+  if( is.null(pred_id) || is.na(pred_id) || 
+      !inherits(pred_id, "character") ||
+      stringr::str_trim(pred_id) == "" 
+  ){
+    stop("ground truth  data must contain `pred_id` column")
+  }
+  if( !(names(gt_inst) %>% stringr::str_equal(gt_id) %>% any()) ){stop("ground truth  data must contain `gt_id` column")}
+  if( names(predictions) %>% stringr::str_equal(gt_id) %>% any() ){
+    predictions <- predictions %>% 
+      dplyr::rename_with(
+        .cols = dplyr::all_of(gt_id)
+        , .fn = function(x){"prediction_id"}
+      )
+    pred_id <- "prediction_id"
+  }else if( !(names(predictions) %>% stringr::str_equal(pred_id) %>% any()) ){
+    stop("predictions  data must contain `pred_id` column")
+  }
+  return(list(
+    predictions = predictions
+    , pred_id = pred_id
+  ))
+}
+# match the instance
+ground_truth_single_match <- function(
+  gt_inst
+  , gt_id = "pile_id"
+  , predictions
+  , pred_id = "pred_pile_id"
+  , min_iou_pct = 0.5
+) {
+  # check it
+  check_ans <- check_gt_str(
+    gt_inst = gt_inst
+    , gt_id = gt_id
+    , predictions = predictions
+    , pred_id = pred_id
+  )
+  if(nrow(gt_inst)!=1 ){stop("ground truth must be spatial `sf` data with a single record")}
+  predictions <- check_ans$predictions
+  pred_id <- check_ans$pred_id
+  # intersection
+    i_temp <-
+      sf::st_intersection(predictions,gt_inst) %>% 
+      dplyr::mutate(i_area = sf::st_area(.) %>% as.numeric())
+    if(nrow(i_temp)==0){return(NULL)}
+    
+  # union
+    u_temp <-
+      i_temp %>% 
+      sf::st_drop_geometry() %>% 
+      dplyr::inner_join(predictions %>% sf::st_set_geometry("geom1"), by = pred_id) %>% 
+      dplyr::inner_join(gt_inst %>% sf::st_set_geometry("geom2") %>% dplyr::select(dplyr::all_of(gt_id)), by = gt_id) %>% 
+      dplyr::rowwise() %>% 
+      dplyr::mutate(
+        u_area = sf::st_union(geom1, geom2) %>% sf::st_area() %>% as.numeric()
+      ) %>% 
+      dplyr::ungroup() %>% 
+      dplyr::select(-c(geom1,geom2)) %>% 
+      sf::st_drop_geometry() %>% 
+      dplyr::mutate(
+        iou = dplyr::case_when(
+          is.na(u_area) | is.nan(u_area) ~ NA
+          , T ~ dplyr::coalesce(i_area,0)/u_area
+        )
+      ) %>% 
+      dplyr::filter(!is.na(iou) & iou>=min_iou_pct)
+    if(nrow(u_temp)==0){return(NULL)}
+    
+  # return
+  return(
+    u_temp %>% 
+      # pick the highest iou
+      dplyr::arrange(desc(iou)) %>% 
+      dplyr::slice(1) %>% 
+      # column clean
+      dplyr::select(dplyr::all_of(
+        c(
+          gt_id, "i_area", "u_area", "iou"
+          , base::setdiff(
+            names(predictions)
+            , c("geometry", "geom", gt_id, "i_area", "u_area", "iou") 
+          )
+        )
+      ))
+  )
+}
+```
+
+test for a single ground truth instance
+
+```{r, warning=FALSE}
+ground_truth_single_match(
+  gt_inst = slash_piles_polys %>% 
+    dplyr::filter(!pile_id %in% training_pile_id) %>% 
+    dplyr::arrange(desc(diameter)) %>% 
+    sf::st_transform(sf::st_crs(predicted_piles_sf)) %>%
+    dplyr::slice(2)
+  , gt_id = "pile_id"
+  , predictions = predicted_piles_sf
+  , pred_id = "pred_pile_id"
+  , min_iou_pct = 0.4
+)
+```
+
+now we need to make a function that matches the instances iteratively allowing for only a single match from the predictions (i.e. one prediction can only go to one ground truth instance), and returns all instances labeled as true positive (correctly matched with a prediction), commission (predictions which do not match a ground truth instance; false positive), or omission (ground truth instances for which no predictions match; false negative)
+
+```{r}
+ground_truth_prediction_match <- function(
+  # ground_truth should be sorted already
+  ground_truth
+  , gt_id = "pile_id"
+  # predictions just needs treeID
+  , predictions
+  , pred_id = "pred_pile_id"
+  , min_iou_pct = 0.5
+) {
+  # check it
+  check_ans <- check_gt_str(
+    gt_inst = ground_truth
+    , gt_id = gt_id
+    , predictions = predictions
+    , pred_id = pred_id
+  )
+  predictions <- check_ans$predictions
+  pred_id <- check_ans$pred_id
+  # set up a blank data frame
+  return_df <-
+    dplyr::tibble(
+      i_area = as.numeric(NA)
+      , u_area = as.numeric(NA)
+      , iou = as.numeric(NA)
+    ) %>% 
+    dplyr::bind_cols(
+      ground_truth %>% 
+        sf::st_drop_geometry() %>% 
+        dplyr::select(dplyr::all_of(gt_id)) %>% 
+        dplyr::slice(0)
+    ) %>% 
+    dplyr::bind_cols(
+      predictions %>% 
+        sf::st_drop_geometry() %>% 
+        dplyr::select(dplyr::all_of(pred_id)) %>% 
+        dplyr::slice(0)
+    ) %>% 
+    dplyr::relocate(tidyselect::starts_with(gt_id))
+  
+  # save names to select
+  nms_temp <- names(return_df)
+  
+  # start with tallest tree and match to get true positives
+    for (i in 1:nrow(ground_truth)) {
+      match_temp <- ground_truth_single_match(
+        gt_inst = ground_truth %>% dplyr::slice(i)
+        , gt_id = gt_id
+        , predictions = predictions %>% dplyr::select(dplyr::all_of(pred_id)) %>% dplyr::anti_join(return_df,by=pred_id)
+        , pred_id = pred_id
+        , min_iou_pct = min_iou_pct
+      )
+      # add to return
+      if(!is.null(match_temp)){
+        return_df <- return_df %>% 
+          dplyr::bind_rows(match_temp %>% dplyr::select(nms_temp))
+      }
+      match_temp <- NULL
+    }
+  # label tps
+  return_df <- return_df %>% 
+    dplyr::mutate(match_grp = "true positive")
+  # add omissions
+  return_df <-
+    return_df %>% 
+    dplyr::bind_rows(
+      ground_truth %>% 
+        sf::st_drop_geometry() %>% 
+        dplyr::anti_join(return_df,by=gt_id) %>% 
+        dplyr::select(dplyr::all_of(gt_id)) %>% 
+        dplyr::mutate(match_grp = "omission")
+    )
+  # add commissions
+  return_df <-
+    return_df %>% 
+    dplyr::bind_rows(
+      predictions %>% 
+        sf::st_drop_geometry() %>% 
+        dplyr::anti_join(return_df,by=pred_id) %>% 
+        dplyr::select(dplyr::all_of(pred_id)) %>% 
+        dplyr::mutate(match_grp = "commission")
+    )
+  # make match_grp factor
+  return_df <- return_df %>% 
+    dplyr::mutate(
+      match_grp = factor(
+        match_grp
+        , ordered = T
+        , levels = c(
+          "true positive"
+          , "commission"
+          , "omission"
+        )
+      ) %>% forcats::fct_rev()
+    )
+  
+  # return
+  if(nrow(return_df)==0){
+    warning("no records found for ground truth to predition matching")
+    return(NULL)
+  }else{
+    return(return_df)
+  }
+  
+}
+```
+
+let's see how we did given the full list of predictions and validation data
+
+```{r}
+ground_truth_prediction_match_ans <- ground_truth_prediction_match(
+  ground_truth = slash_piles_polys %>% 
+    dplyr::filter(!pile_id %in% training_pile_id) %>% 
+    dplyr::arrange(desc(diameter)) %>% 
+    sf::st_transform(sf::st_crs(predicted_piles_sf))
+  , gt_id = "pile_id"
+  , predictions = predicted_piles_sf
+  , pred_id = "pred_pile_id"
+  , min_iou_pct = 0.25
+)
+```
+
+how did our predictions do for this particular example?
+
+```{r}
+# what did we get?
+ground_truth_prediction_match_ans %>% 
+  dplyr::count(match_grp) %>% 
+  dplyr::mutate(pct = (n/sum(n)) %>% scales::percent(accuracy=0.1))
+```
+
+let's look at that spatially
+
+```{r}
+pal_match_grp = c(
+  "omission"=viridis::cividis(3)[1]
+  , "commission"= "black" #viridis::cividis(3)[2]
+  , "true positive"=viridis::cividis(3)[3]
+)
+# plot it
+ggplot2::ggplot() +
+  ggplot2::geom_sf(
+    data = 
+      ground_truth_temp$crowns %>% 
+        dplyr::left_join(
+          ground_truth_prediction_match_ans %>% 
+            dplyr::select(treeID,match_grp)
+          , by = "treeID"
+        )
+    , mapping = ggplot2::aes(fill = match_grp)
+    , color = NA ,alpha=0.7
+  ) + 
+  ggplot2::geom_sf(
+    data =
+      ans_crowns_no_mask %>%
+        dplyr::left_join(
+          ground_truth_prediction_match_ans %>%
+            dplyr::select(treeID_pred,match_grp)
+          , by = dplyr::join_by(treeID==treeID_pred)
+        )
+    , mapping = ggplot2::aes(fill = match_grp, color = match_grp)
+    , alpha = 0
+    , lwd = 1.2
+  ) +
+  ggplot2::scale_fill_manual(values = pal_match_grp, name = "") +
+  ggplot2::scale_color_manual(values = pal_match_grp, name = "") +
+  ggplot2::theme_void() +
+  ggplot2::guides(
+    fill = ggplot2::guide_legend(override.aes = list(color = c(NA,NA,viridis::cividis(3)[2])))
+    , color = "none"
+  )
+```
+
 
 ### `SuperpixelImageSegmentation` package SLICAP clustering
 
