--- a/src/03_ptcld_classification.Rmd
+++ b/src/03_ptcld_classification.Rmd
@@ -149,7 +149,6 @@ ggplot2::ggsave("../data/chm.jpeg", height = 8, width = 10.5)
 
 let's visually inspect the DTM and CHM with the pile outlines overlaid
 
-
 ```{r}
 p_fn_temp <- function(
     rn
@@ -267,11 +266,49 @@ plt_list_rast_comp <- sample(1:nrow(slash_piles_polys %>% dplyr::filter(!is.na(c
 
 combine the plots for a few piles
 
-```{r, height = 10.5, width = 5}
+```{r, height = 10.5, width = 7.5}
 patchwork::wrap_plots(
   plt_list_rast_comp
   , ncol = 2
 )
 ggplot2::ggsave("../data/pile_tiles_rast.jpeg", height = 8.5, width = 10.5)
+```
+
+```{r, warning=FALSE, message=FALSE, echo=FALSE, include=FALSE}
+remove(list = ls()[grep("_temp",ls())])
+gc()
+```
+
+a few things are noteworthy in these examples:
+ 
+* Piles are clearly visible in some areas of the DTM but less visible in other areas
+* Piles are delineated in the DSM but with varying degrees of definition based on surrounding terrain and pile structure
+* The DTM and DSM were rarely impacted by shadows in the RGB imagery
+* It is interesting to see coarse woody debris occasionally visible in the DSM
+
+## Raster-based approaches
+
+We'll first attempt to detect slash piles using raster-based methods with the DTM and DSM. These raster-based approaches are simple and efficient but can be limited in complex forest structures where piles might be occluded by overstory trees and rasterization simplifies/removes some of the rich 3D information in the point cloud. For slash piles, which are often irregular and may not have a distinct "treetop" equivalent, common CHM-based tree detection methods might be less directly applicable. We'll see...
+
+### Watershed Segmentation
+
+When used for individual tree detection (ITD), this technique treats the CHM as a topographic surface, where local maxima represent tree tops and valleys represent crown boundaries. A "water source" is conceptually placed at each local lowest point, and the surface is "flooded." Barriers are generated where different "water sources" meet, forming watershed lines that delineate individual tree crowns.
+
+```{r}
+pile_id_temp <- 73
+crs_temp <- terra::crs(ortho_rast)
+# buff
+buff_temp <- slash_piles_polys %>% dplyr::filter(pile_id == pile_id_temp) %>% 
+  sf::st_centroid() %>% 
+  sf::st_buffer(35, endCapStyle = "SQUARE")
+# piles filter
+piles_temp <- slash_piles_polys %>% 
+  sf::st_intersection(buff_temp)
+# rgb
+rgb_temp <- buff_temp %>% 
+  sf::st_transform(crs_temp) %>% 
+  ortho_plt_fn(buffer = 0) + 
+  ggplot2::geom_sf(data = piles_temp %>% sf::st_transform(crs_temp), fill = NA, color = "white", lwd = 0.3)
+rgb_temp
 ```
 
